<resources>
    <string name="app_name">SGD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">sgd@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mapa">Mapa</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_como_usar">Como Usar</string>
    <string name="menu_feedback_app">Feedback App</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback_here"> Feedback</string>
    <string name="por_favor_deixe_seu_feedback_sobre_o_local">"Por favor, deixe o seu feedback sobre o local. "</string>
    <string name="agrade_emos_desde_j">Agradeçemos desde já!</string>
    <string name="lugar_favorito">Lugar favorito</string>
    <string name="compartilhe_o_local">Compartilhe o local</string>
    <string name="enviar">ENVIAR</string>
    <string name="sair">Sair</string>
</resources>