<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_round_map_24"
            android:title="@string/menu_mapa" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_como_usar"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_como_usar" />
        <item
            android:id="@+id/nav_sair_app"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/sair" />


    </group>
</menu>