<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mapa">

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.example.tcc_sgd.MapsFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.tcc_sgd.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_como_usar"
        android:name="com.example.tcc_sgd.ComoUsarFragment"
        android:label="@string/menu_como_usar"
        tools:layout="@layout/fragment_como_usar" />

</navigation>